--- a/task-backend.csproj
+++ b/task-backend.csproj
@@ -26,11 +26,15 @@
     <None Remove="DBContext\" />
     <None Remove="BusinessLogic\" />
     <None Remove="Interfaces\" />
+    <None Remove="Models\" />
+    <None Remove="DTO\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Context\" />
     <Folder Include="DBContext\" />
     <Folder Include="BusinessLogic\" />
     <Folder Include="Interfaces\" />
+    <Folder Include="Models\" />
+    <Folder Include="DTO\" />
   </ItemGroup>
 </Project>
